# Neuronova

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py  predict.py  schema.py
data/processed/: test.csv  train.csv  val.csv
models/: meta.joblib
reports/: audit_report.txt
src/neuronova/: data.py  evaluate.py  features.py  train.py
web/: package-lock.json  package.json
web/src/: index.css  main.jsx
web/src/components/: Nav.jsx  Nav.module.css  RiskResult.jsx  RiskResult.module.css  ScoreQuestion.jsx  ScoreQuestion.module.css
web/src/pages/: AuditDashboard.jsx  AuditDashboard.module.css  Methodology.jsx  Methodology.module.css  ScreeningForm.jsx  ScreeningForm.module.css
