[project]
name = "neuronova"
version = "0.1.0"
description = "ADHD screening using phenotypic data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "imbalanced-learn>=0.14.1",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "uvicorn>=0.47.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.setuptools.packages.find]
where = ['src']